@@ -20,10 +20,10 @@ public class MealTestData {
     public static final Meal MEAL1 = new Meal(MEAL1_ID, of(2023, Month.JANUARY,01,10,0),"Завтрак",500);
     public static final Meal MEAL2 = new Meal(MEAL1_ID+1, of(2023, Month.JANUARY,01,13,0),"Обед",1000);
     public static final Meal MEAL3 = new Meal(MEAL1_ID+2, of(2023, Month.JANUARY,01,20,0),"Ужин",500);
-    public static final Meal MEAL4 = new Meal(MEAL1_ID+3, of(2023, Month.JANUARY,02,0,0),"Еда на граничное значение",100);
-    public static final Meal MEAL5 = new Meal(MEAL1_ID+3, of(2023, Month.JANUARY,02,10,0),"Завтрак",500);
-    public static final Meal MEAL6 = new Meal(MEAL1_ID+4, of(2023, Month.JANUARY,02,13,0),"Обед",1000);
-    public static final Meal MEAL7 = new Meal(MEAL1_ID+5, of(2023, Month.JANUARY,02,20,0),"Ужин",510);
+    public static final Meal MEAL4 = new Meal(MEAL1_ID+3, of(2023, Month.JANUARY,02,0,0),"Еда на граничное занчение",100);
+    public static final Meal MEAL5 = new Meal(MEAL1_ID+4, of(2023, Month.JANUARY,02,10,0),"Завтрак",500);
+    public static final Meal MEAL6 = new Meal(MEAL1_ID+5, of(2023, Month.JANUARY,02,13,0),"Обед",1000);
+    public static final Meal MEAL7 = new Meal(MEAL1_ID+6, of(2023, Month.JANUARY,02,20,0),"Ужин",510);
     public static final Meal ADMIN_MEAL1 = new Meal(ADMIN_MEAL_ID, of(2023, Month.JANUARY,02,14,0),"Админ ланч",510);
     public static final Meal ADMIN_MEAL2 = new Meal(ADMIN_MEAL_ID+1, of(2023, Month.JANUARY,02,21,0),"Админ ужин",1500);
 
@@ -38,15 +38,15 @@ public class MealTestData {
     }
 
     public static void assertMatch(Meal actual, Meal expected){
-        assertThat(actual).isEqualToComparingFieldByField(expected);
+        assertThat(actual).isEqualToIgnoringGivenFields(expected,"user");
     }
 
     public static void assertMatch(Iterable<Meal> actual, Meal... expected){
-        assertMatch(actual, Arrays.asList(expected));
+        assertMatch(actual, List.of(expected));
     }
 
-    public static void assertMatch(Iterable<Meal> actual, List<Meal> expected) {
-        assertThat(actual).usingFieldByFieldElementComparator().isEqualTo(expected);
+    public static void assertMatch(Iterable<Meal> actual, Iterable<Meal> expected) {
+        assertThat(actual).usingElementComparatorIgnoringFields("user").isEqualTo(expected);
     }
 
 
